Fix z-index issue with close button in flyout.

--- a/src/widgets/flyout/editor/blocks/container/blocks/content/index.scss
+++ b/src/widgets/flyout/editor/blocks/container/blocks/content/index.scss
@@ -12,6 +12,7 @@
   color: #000000;
   border: solid 1px #DDDDDD;
   border-radius: 4px;
+  z-index: 1;
 
   .block-list-appender {
     display: none;
